Diag: permissive CORS, dual mapping and debug logs